# htmx-workshop-meetup-10

./: Cargo.toml  README.md  index.html  justfile  oranda.json
.github/: dependabot.yml
.github/workflows/: verify.yaml  web.yaml
.shuttle/: config.toml
api_tests/: health.hurl  hurl.just  qrcode.hurl  variables
assets/: alpine.js  app.css
book/: 404.html  index.html  intro.html  print.html  searchindex.js  searchindex.json
book/axum/: axum.html  dependency_injection.html  extraction.html  general.html  handlers.html  state.html
book/hmtx/: htmx_intro.html  htmx_samples.html
book/htmx/: general.html  htmx_intro.html  htmx_samples.html
book/server_side_rendering/: askama.html  general.html
meetup/: book.toml
meetup/src/: SUMMARY.md  askama.md  htmx_intro.md  htmx_samples.md  intro.md
meetup/src/axum/: axum.md  dependency_injection.md  extraction.md  general.md  handlers.md  state.md
meetup/src/axum/assets/: dependency.drawio
meetup/src/hmtx/: htmx_intro.md  htmx_samples.md
meetup/src/htmx/: htmx_intro.md  htmx_samples.md
meetup/src/server_side_rendering/: askama.md
snippets/axum/extraction/: Cargo.toml
snippets/axum/extraction/src/: main.rs
snippets/axum/handlers/: Cargo.toml
snippets/axum/handlers/src/: main.rs
snippets/axum/injection/: Cargo.toml
snippets/axum/injection/migrations/: 20241112202201_create_users_table.sql
snippets/axum/injection/src/: main.rs  repository.rs  sql_adapter.rs  user.rs
snippets/axum/injection/src/fixtures/: existing_users.sql
snippets/axum/state/: Cargo.toml
snippets/axum/state/src/: lib.rs  main.rs
snippets/htmx/component_example/: Cargo.toml
snippets/htmx/component_example/assets/: index.html
snippets/htmx/component_example/src/: main.rs
snippets/htmx/component_example/templates/: component.html
snippets/htmx/form_example/: Cargo.toml
snippets/htmx/form_example/assets/: index.html
snippets/htmx/form_example/src/: main.rs
snippets/htmx/smallest_example/: Cargo.toml
snippets/htmx/smallest_example/assets/: index.html
snippets/htmx/smallest_example/src/: main.rs
src/: main.rs  server.rs
src/assets/: mod.rs
src/qr_code/: mod.rs
src/qr_code/core/: mod.rs
src/qr_code/endpoints/: images.rs  mod.rs
src/qr_code/endpoints/html/: codes.rs  create.rs  game.rs  index.rs  mod.rs  table.rs
src/qr_code/persictence/: mod.rs
src/qr_code/qr_code_endpoints/: html.rs  images.rs  mod.rs
templates/: created_qr.html  qr_code.html  qr_table.html
