[package]
name = "htmx-workshop-meetup-10"
version = "0.1.0"
edition = "2021"
homepage = "https://rust-basel.ch/"
repository = "https://github.com/rust-basel/htmx-workshop-meetup-10"
license-file = "LICENSE"
readme = "README.md"

authors=[
"Yasin Gündüz https://github.com/yguenduez",
"Roland Brand - https://github.com/bar9",
"Silen Locatelli - https://github.com/SilenLoc",
]




[dependencies]
axum = {version = "0.7.5", features = ["json"]}
tokio = { version = "1.0", features = ["full"] }
askama = { version = "0.12.1" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
anyhow= "1"
lazy_static = "1"
qrcode = "0.14.1"
image = "0.25.2"
mime = "0.3"
async-trait = "0.1.83"
uuid = {version ="1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }


[profile.dev.package."*"]
opt-level = 1
