[package]
name = "htmx-workshop-meetup-10"
version = "0.1.0"
edition = "2021"
homepage = "https://rust-basel.ch/"
repository = "https://github.com/rust-basel/htmx-workshop-meetup-10"
license-file = "LICENSE"
readme = "README.md"

authors=[
"Yasin Gündüz https://github.com/yguenduez",
"Roland Brand - https://github.com/bar9",
"Silen Locatelli - https://github.com/SilenLoc",
]




[dependencies]
axum = {version = "0.7.5", features = ["json"]}
tokio = { version = "1.0", features = ["full"] }
tower-http = {version = "0.6.1", features = ["fs"]}
async-trait = "0.1.83"

askama = { version = "0.12.1" }
maud = "0.26.0"

serde = { version = "1.0", features = ["derive"] }



anyhow= "1"
mime = "0.3"

uuid = {version ="1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
] }

regex = "1.11"
qrbill = { git = "https://github.com/bar9/qrbill.git"}
isocountry = "0.3.2"

[profile.dev.package."*"]
opt-level = 1
