[package]
name = "htmx-workshop-meetup-10"
version = "0.1.0"
edition = "2021"
homepage = "https://rust-basel.ch/"
repository = "https://github.com/rust-basel/htmx-workshop-meetup-10"
license-file = "LICENSE"
readme = "README.md"

authors=[
"Yasin Gündüz https://github.com/yguenduez",
"Roland Brand - https://github.com/bar9",
"Silen Locatelli - https://github.com/SilenLoc",
"Rust Basel - https://rust-basel.ch/"
]



[dependencies]
axum = {version = "0.8.2", features = ["json"]}
tokio = { version = "1.0", features = ["full"] }
tower-http = {version = "0.6.1", features = ["fs"]}
serde = { version = "1.0", features = ["derive"] }
mime = "0.3"

# html templating
askama = { version = "0.12.1" }
maud = "0.26.0"


anyhow= "1"

uuid = {version ="1.10.0", features = [
    "v4",
    "fast-rng", 
] }

regex = "1.11"
qrbill = { git = "https://github.com/bar9/qrbill.git"}
isocountry = "0.3.2"
html-escape = "0.2.13"

[profile.dev.package."*"]
opt-level = 1
