[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0.132"
tower = { version = "0.5.1", features = ["util"] }
