[package]
name = "htmx-workshop-meetup-10-htmx-snippet-smallest-example"
version = "0.1.0"
edition = "2021"
homepage = "https://rust-basel.ch/"
repository = "https://github.com/rust-basel/htmx-workshop-meetup-10"
license-file = "LICENSE"
readme = "README.md"


[dependencies]
axum = {version = "0.7.5", features = ["json"]}
tokio = { version = "1.0", features = ["full"] }
tower-http = {version = "0.6.1", features = ["fs"]}